crates/tt-cli/src/commands/todo/snapshots/tt_cli__commands__todo__render__tests__todo_next_blocked.snap
---
source: crates/tt-cli/src/commands/todo/render/tests.rs
expression: output
---
TODO NEXT (2026-06-23)

Due
- Ship overdue fix [id:td_due000001 rank:9 priority:ipi(9) stream:- overdue:2026-06-22]

Main
- Plain admin [id:td_admin0001 rank:2 priority:admin(2) stream:-]

Blocked
- Blocked launch task [id:td_block0001 rank:9 priority:ipi(9) stream:- blocked:"waiting on Peter"]
