crates/tt-cli/src/commands/todo/snapshots/tt_cli__commands__todo__render__tests__todo_next_by_priority.snap
---
source: crates/tt-cli/src/commands/todo/render/tests.rs
expression: "next_output(&loaded, NextOptions { by_priority: true, ..options() })"
---
TODO NEXT (2026-06-23)

Due
- Ship overdue fix [id:td_due000001 rank:9 priority:ipi(9) stream:- overdue:2026-06-22 when:2026-06-30]

Main by priority
  priority:ipi(9)
  - Stream-linked work [id:td_stream001 rank:9 priority:ipi(9) stream:Fable 5 DPI]
  priority:admin(2)
  - Quick admin reply [id:td_quick0001 rank:2 priority:admin(2) stream:- quick]
