crates/tt-cli/src/commands/todo/snapshots/tt_cli__commands__todo__render__tests__todo_next_quick.snap
---
source: crates/tt-cli/src/commands/todo/render/tests.rs
expression: "next_output(&loaded, NextOptions { quick: true, later: true, ..options() })"
---
TODO NEXT (2026-06-23)

Main
- Quick admin reply [id:td_quick0001 rank:2 priority:admin(2) stream:- quick]

Later
- Deferred task [id:td_later0001 rank:9 priority:ipi(9) stream:- when:2026-06-25 quick]
